# nichiyou-daiku

./: .gitignore  LICENSE  Makefile  README.md  ci.py  pyproject.toml  refine.md  run-ci-local.sh
.devcontainer/: devcontainer.json
.github/: release-drafter.yml
.github/workflows/: ci.yml
ci/: README.md  __init__.py  dagger_pipeline.py  requirements.txt
examples/: __init__.py  basic_joints.py  bookshelf_example.py  build123d_conversion_demo.py  corner_angle.py  dining_table_report.md  dsl_basic_joints.py  dsl_corner_angle.py  dsl_shelf.py  dsl_simple_table.py  graph_validation_demo.py  l_angle.py  l_angle_connection.py  parametric_furniture.py  report_demo.py  resource_demo.py  shelf.py  shelf_with_comments.nd  shelf_with_comments_report.md  simple_rectangle.py  simple_table.py  simple_table_with_comments.nd  test_right_handed.py  test_screw_joints.py  utils.py  workbench_example.py
examples/nd_files/: corner_angle.nd  corner_angle_compact.nd  shelf.nd  simple_table.nd  simple_table_compact.nd
src/nichiyou_daiku/: __init__.py
src/nichiyou_daiku/cli/: __init__.py  dsl_cli.py  utils.py
src/nichiyou_daiku/cli/commands/: __init__.py  drawing.py  export.py  report.py  validate.py  view.py
src/nichiyou_daiku/connectors/: __init__.py  aligned_screw.py  base.py  general.py
src/nichiyou_daiku/core/: __init__.py  anchor.py  assembly.py  connection.py  dowel.py  geometry.py  lumber.py  model.py  piece.py  preset_base.py  resources.py  screw.py
src/nichiyou_daiku/core/assembly/: __init__.py  builder.py  constants.py  dowel_joints.py  joints.py  models.py  projection.py  screw_joints.py  utils.py
src/nichiyou_daiku/core/geometry/: __init__.py  box.py  coordinates.py  corner.py  dimensions.py  edge.py  face.py  offset.py
src/nichiyou_daiku/dsl/: __init__.py  exceptions.py  grammar.py  parser.py  transformer.py
src/nichiyou_daiku/graph/: __init__.py  validation.py  woodworking_graph.py
src/nichiyou_daiku/rendering/: __init__.py  build123d_converter.py
src/nichiyou_daiku/shell/: __init__.py  build123d_export.py  report_generator.py  resources.py  utils.py
tests/: conftest.py
tests/cli/: test_report.py  test_validate.py
tests/cli/commands/: test_export.py
tests/connectors/: __init__.py  test_aligned_screw.py  test_aligned_screw_simple.py  test_base.py
tests/core/: test_anchor_validation.py  test_assembly.py  test_connection.py  test_connection_transform.py  test_connection_validation.py  test_cross_product_algorithm.py  test_dowel.py  test_geometry.py  test_geometry_calculations.py  test_lumber.py  test_model.py  test_orientation.py  test_orientation_preservation.py  test_orientation_transform.py  test_piece.py  test_projection.py  test_resources.py  test_screw.py
tests/dsl/: __init__.py  test_dowel_preset.py  test_exceptions.py  test_integration.py  test_parser.py  test_parser_comments.py  test_screw_preset.py  test_transformer.py
tests/graph/: TEST_SUMMARY.md  __init__.py  conftest.py  test_graph_manipulation.py  test_performance_benchmarks.py  test_property_based.py  test_validation.py  test_visual_layouts.py  test_woodworking_graph.py
tests/regression/: README.md  __init__.py  conftest.py  generate_baseline.py  test_projection_regression.py
tests/regression/fixtures/corner_angle/: model.nd
tests/regression/fixtures/simple_table/: model.nd
tests/rendering/: __init__.py  test_build123d_converter.py
tests/shell/: __init__.py  test_build123d_export.py  test_report_generator.py  test_resources.py
tests/utils/: __init__.py  projection_utils.py
