[project]
name = "nichiyou-daiku"
version = "0.1.0"
description = "A Python library for designing DIY furniture using standard lumber sizes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Masahiro Wada", email = "argon.argon.argon@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
viz = [
    "build123d",
    # NOTE: build123d>=0.9.0 is required for full 3D rendering functionality
    # However, it currently doesn't support ARM64/aarch64 platforms
]
all = [
    "build123d",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.135.2",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
    "types-networkx>=3.5.0.20250531",
    "psutil>=6.1.1",
    "ocp-vscode>=2.7.1",
    "pyright>=1.1.402",
]

[tool.uv.sources]
build123d = { git = "https://github.com/gumyr/build123d" }
