[project]
name = "nichiyou-daiku"
version = "0.1.0"
description = "A Python library for designing DIY furniture using standard lumber sizes"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Masahiro Wada", email = "argon.argon.argon@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "lark>=1.1.9",  # DSL parsing support
]

[project.optional-dependencies]
viz = [
    "build123d",
    # NOTE: build123d>=0.9.0 is required for full 3D rendering functionality
    # However, it currently doesn't support ARM64/aarch64 platforms
    "ocp-vscode>=2.8.5",
]
all = [
    "build123d",
    "ocp-vscode>=2.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.135.2",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
    "psutil>=6.1.1",
    "pyright>=1.1.402",
]
ci = [
    "dagger-io>=0.18.11",
    "anyio>=4.9.0",
]

[tool.uv.sources]
build123d = { git = "https://github.com/gumyr/build123d" }
